--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,6 @@
     
 }
 
-/*RESPONSIVE HECHO EN BASE A UN MAX WIDTH DE 480PX*/
 .container-fluid {  
   display: grid;
   height: 100vh;
@@ -52,7 +51,7 @@
 
 }
 
-.navBar {  
+.navbar {  
   display: grid;
   grid-template-columns: 0.4fr 2.9fr 0.7fr;
   grid-template-rows: 0.5fr;
@@ -67,6 +66,7 @@
   max-width: none;
   
 }
+
 
 @media screen and (max-width: 480px) {
   .navBar {  
@@ -89,8 +89,8 @@
   display: grid;
   justify-items: center;
   align-items: center;
-  margin: 5px;
-  padding: 5px;
+  width: 100%;
+  height: auto;
 
 }
 
@@ -100,13 +100,18 @@
   position: relative;
 }
 
-@media screen and (max-width: 480px) {
+
+@media screen and (max-width: 768px) {
   .logoSize {
-    height: auto;
-    width: 80px;
+    height: 75px;
+    width: auto;
     position: relative;
   }
 
+}
+
+.menuColor {
+background-color: #fce803;
 }
 
 .menuDeNavegacion { 
@@ -119,6 +124,9 @@
 
 }
 
+.navbar-brand {
+  background-color: #fce803;
+}
 
 @media screen and (max-width: 480px) {
   .lista {
@@ -157,8 +165,8 @@ a:hover {
 
 li {
   list-style-type: none;
-  width: 14%;
-  margin: 10px;
+  width: 15%;
+  padding: 3px;
   border: solid #525251 3px;
   border-radius: 25px;
   background-color: #c2c2c0;
@@ -188,11 +196,19 @@ li:hover {
 
 }
 
+@media screen and (max-width: 480px) {
+  form { 
+    display: none;
+  }
+
+}
+
 .busqueda { grid-area: busqueda; 
   display: grid;
   justify-items: center;
   align-items: center;
 }
+
 
 @media screen and (max-width: 480px) {
   .busqueda { 
@@ -201,16 +217,18 @@ li:hover {
 
 }
 
+
+
 .banner { 
   grid-area: banner; 
   display: grid;
-  width: 95%;
+  width: 100%;
   height: auto;
   align-items: center;
   justify-items: stretch;
 }
 
-
+/*
 @media screen and (max-width: 480px) {
   .banner { 
     grid-area: banner; 
@@ -224,13 +242,14 @@ li:hover {
   }
 
 }
-
+*/
 
 .imgBanner {
   border-radius: 20px;
   width: 100%;
 }
 
+/*
 @media screen and (max-width: 480px) {
   .imgBanner {
     border-radius: 20px;
@@ -239,6 +258,7 @@ li:hover {
   }
 
 }
+*/
 
 .modelosDestacados {  
   display: grid;
@@ -261,6 +281,7 @@ li:hover {
   width: 95%;
 }
 
+/*
 @media screen and (max-width: 480px) {
   .modelosDestacados {  
     display: grid;
@@ -268,7 +289,7 @@ li:hover {
     border-radius: 20px;
     border: #00000000;
     /*grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 0.1fr 1.9fr;*/
+    grid-template-rows: 0.1fr 1.9fr;*//*
     gap: 0px 0px;
     grid-auto-flow: column;
     grid-template-areas:
@@ -283,6 +304,7 @@ li:hover {
   }
 
 }
+*/
 
 .tituloModelosDestacados { 
   display: flex;
@@ -297,6 +319,7 @@ li:hover {
   
 }
 
+/*
 @media screen and (max-width: 480px) {
   .tituloModelosDestacados { 
     display: flex;
@@ -311,10 +334,11 @@ li:hover {
   }
 
 }
+*/
 
 .tituloModelosDestacados__texto {
   margin-left: 12px;
-  font-size: 40px;
+  font-size: 220%;
   font-family: 'Mukta';
   font-weight: 800;
 }
@@ -342,6 +366,7 @@ li:hover {
   
 }
 
+/*
 @media screen and (max-width: 480px) {
   .cardsModelosDestacados {  
     width: 100%;
@@ -352,6 +377,8 @@ li:hover {
   }
 
 }
+
+*/
 
 .modeloDestacado1 { 
   grid-area: modeloDestacado1; 
@@ -365,6 +392,7 @@ li:hover {
   
 }
 
+/*
 @media screen and (max-width: 480px) {
   .modeloDestacado1 { 
     grid-area: modeloDestacado1; 
@@ -378,7 +406,7 @@ li:hover {
   }
 
 }
-
+*/
 
 .modeloDestacado2 { grid-area: modeloDestacado2; 
   display: grid;
@@ -391,6 +419,7 @@ li:hover {
   
 }
 
+/*
 @media screen and (max-width: 480px) {
   .modeloDestacado2 { grid-area: modeloDestacado2; 
     grid-area: modeloDestacado1; 
@@ -405,6 +434,8 @@ li:hover {
 
 }
 
+*/
+
 .modeloDestacado3 { grid-area: modeloDestacado3; 
   display: grid;
   width: 95%;
@@ -417,6 +448,7 @@ li:hover {
 
 }
 
+/*
 @media screen and (max-width: 480px) {
   .modeloDestacado3 { grid-area: modeloDestacado3; 
     display: none;
@@ -424,6 +456,7 @@ li:hover {
   }
 
 }
+*/
 
 .modeloDestacado4 { grid-area: modeloDestacado4; 
   display: grid;
@@ -437,6 +470,7 @@ li:hover {
 
 }
 
+/*
 @media screen and (max-width: 480px) {
   .modeloDestacado4 { grid-area: modeloDestacado4; 
     display: none;
@@ -444,6 +478,7 @@ li:hover {
   }
 
 }
+*/
 
 .modelosDestacados__modelos {
   font-family: 'Mukta';
@@ -482,6 +517,7 @@ li:hover {
   width: 95%;
 }
 
+/*
 @media screen and (max-width: 480px) {
   .blog {  
     display: grid;
@@ -505,7 +541,7 @@ li:hover {
   }
 
 }
-
+*/
 .tituloBlog { 
   grid-area: tituloBlog; 
   margin: 5px;
@@ -518,6 +554,7 @@ li:hover {
 
 }
 
+/*
 @media screen and (max-width: 480px) {
   .tituloBlog { 
     grid-area: tituloBlog; 
@@ -533,13 +570,16 @@ li:hover {
 
 }
 
+*/
+
   .tituloBlog__texto {
     margin-left: 12px;
-    font-size: 40px;
+    font-size: 220%;
     font-family: 'Mukta';
     font-weight: 800;
   }
 
+/*
 @media screen and (max-width: 480px) {
   .tituloBlog__texto {
     font-size: 15px;
@@ -548,6 +588,7 @@ li:hover {
   }
 
 }
+*/
 
 .cardsBlog {  
   display: grid;
@@ -579,6 +620,7 @@ li:hover {
   margin: 10px;
 }
 
+
 .blogText1 {
   display: grid;
 margin: 10px;
@@ -590,6 +632,7 @@ align-content: center;
 
 }
 
+/*
 @media screen and (max-width: 480px) {
   .blogText1 {
   display: flex;
@@ -601,7 +644,7 @@ align-content: center;
   }  
   
 }
-
+*/
 
 .img1 {
   display: grid;
@@ -609,7 +652,7 @@ align-content: center;
   width: 100%;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
   .img1 {
     display: none;
   }
@@ -643,6 +686,7 @@ align-content: center;
 
 }
 
+/*
 @media screen and (max-width: 480px) {
   .blogText2 {
   display: flex;
@@ -655,19 +699,21 @@ align-content: center;
   }
 
 }
-
+*/
 
 .img2 {
   display: grid;
   align-items: flex-start;
 }
 
-@media screen and (max-width: 480px) {
+
+@media screen and (max-width: 768px) {
   .img2 {
     display: none;
   }
 
 }
+
 
 .imgBlog {
     width: 100%;
@@ -710,6 +756,7 @@ align-content: center;
 
 }
 
+/*
 @media screen and (max-width: 480px) {
   .irArriba { 
     display: grid;
@@ -721,6 +768,7 @@ align-content: center;
   }
 
 }
+*/
 
 .irArribaTxt { 
   grid-area: irArriba; 
@@ -744,6 +792,7 @@ align-content: center;
   width: 100vw;
 }
 
+/*
 @media screen and (max-width: 480px) {
   .footer { 
     grid-area: footer; 
@@ -755,6 +804,8 @@ align-content: center;
   }
 
 }
+*/
+
 .footerAlign__derechos {
   margin-left: 15px;
   left: 15px;
@@ -895,7 +946,7 @@ align-content: center;
   border-radius: 20px;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
   .headCategorias {  
     display: grid;
     grid-template-columns: 0.8fr 1.2fr;
@@ -929,7 +980,7 @@ align-content: center;
 
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
   .tituloCategorias { 
     font-size: 20px;
   
@@ -950,7 +1001,7 @@ align-content: center;
   align-items: center;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
   .descripcionCategorias { 
     display: none;
   
@@ -984,7 +1035,7 @@ align-content: center;
 
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
   .modelosYellow {  
     height: 65%;
   
@@ -1046,7 +1097,7 @@ align-content: center;
   margin: 10px;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
   .cuadros {  
     height: 65%;
   }
@@ -1105,7 +1156,7 @@ align-content: center;
   margin: 10px;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
   .rodados {  
     height: 65%;
   }
@@ -1162,7 +1213,7 @@ align-content: center;
   margin: 10px;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
   .frenos {  
     height: 65%;
   }
@@ -1221,7 +1272,7 @@ align-content: center;
   margin: 10px;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
   .cambios {  
     height: 65%;
   }
@@ -1280,7 +1331,7 @@ align-content: center;
 
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
   .accesorios {  
     height: 65%;
   }
