--- a/css/styles.css
+++ b/css/styles.css
@@ -22,11 +22,40 @@
   padding-left: 0px;
   padding-right: 0px;
   justify-items: center;
-    
 }
 
+.fadeinout {
+  animation: fadeinout 1s linear 1 forwards;
+}
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 767px) {
+  .container-fluid {  
+    display: grid;
+    height: 100vh;
+    width: 100vw;
+    grid-template-columns:1fr;
+    grid-template-rows: 0.3fr 1.4fr 2fr 2fr 0.2fr 0.1fr;
+    gap: 2px 0px;
+    grid-template-areas:
+      "navBar"
+      "banner"
+      "modelosDestacados"
+      "blog"
+      "irArriba"
+      "footer";
+    padding-left: 0px;
+    padding-right: 0px;
+    justify-items: center;
+  }
+}
+
+@keyframes fadeinout {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+  
+}
+
+/*@media screen and (max-width: 768px) {
   .container {  
     display: grid;
     margin-top: 0px;
@@ -46,14 +75,13 @@
       "footer";
     width: 100vw;
     height: 100vh;
-
   }
 
-}
+}*/
 
 .navbar {  
   display: grid;
-  grid-template-columns: 0.4fr 2.9fr 0.7fr;
+  grid-template-columns: 0.3fr 2.9fr 0.8fr;
   grid-template-rows: 0.5fr;
   gap: 0px 0px;
   grid-auto-flow: row;
@@ -67,21 +95,30 @@
   
 }
 
-
-@media screen and (max-width: 480px) {
-  .navBar {  
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    height: 100%;
+@media screen and (max-width: 767px) {
+  .navbar {  
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 0.5fr 1.5fr;
+    gap: 0px 0px;
+    grid-auto-flow: row;
+    grid-template-areas:
+      "logo menuDeNavegacion";
+    grid-area: navBar; 
     z-index: 1;
     background-color: #fce803;
-    border-radius: 20px;
     width: 100vw;
-    margin-bottom: 10px;
-
+    max-width: 100vw;
+    
   }
+}
 
+@media screen and (max-width: 767px) {
+  .menuDeNavegacion {
+    display: list-item inline;
+    align-content: center;
+    justify-items: stretch;
+  }
 }
 
 .logo { 
@@ -89,32 +126,16 @@
   display: grid;
   justify-items: center;
   align-items: center;
-  height: auto;
+  height: 50px;
 
 }
 
-.logoSize {
-  height: auto;
-  width: 110px;
-  position: relative;
-}
-
-
-@media screen and (max-width: 768px) {
-  .logoSize {
-    height: 15px;
-    width: auto;
-    position: relative;
+/*@media screen and (max-width: 768px) {
+  .logo { 
+    align-self: center;
+  
   }
-
-}
-
-@media screen and (max-width: 768px) {
-  navbar-brand {
-    width: 50%;
-    height: auto
-  }
-}
+}*/
 
 .menuColor {
 background-color: #fce803;
@@ -134,7 +155,14 @@ background-color: #fce803;
   background-color: #fce803;
 }
 
-@media screen and (max-width: 480px) {
+/*@media and (max-width: 767px) {
+  .navbar {
+  height: 10%;
+  }
+  
+}*/
+
+/*@media screen and (max-width: 768px) {
   .lista {
     list-style: none;
     height: 100%;
@@ -147,15 +175,8 @@ background-color: #fce803;
     align-content: center;
   }
 
-}
+}*/
 
-.lista {
-  list-style: none;
-  height: 100%;
-  width: 100%;  
-  justify-content: center;
-  margin-left: 20px;
-}
 
 a{
   text-decoration: none;
@@ -173,9 +194,9 @@ li {
   list-style-type: none;
   width: 15%;
   padding: 3px;
-  border: solid #525251 3px;
+  /*border: solid #525251 3px;
   border-radius: 25px;
-  background-color: #c2c2c0;
+  background-color: #c2c2c0;*/
   text-align: center;
   display: inline-block;
     
@@ -187,10 +208,10 @@ li:hover {
 }
 
 
-@media screen and (max-width: 480px) {
+/*@media screen and (max-width: 768px) {
   li {
     list-style-type: none;
-    width: 80%;
+    width: 100%;
     border: solid #525251 3px;
     border-radius: 25px;
     background-color: #c2c2c0;
@@ -200,9 +221,9 @@ li:hover {
     
   }
 
-}
+}*/
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
   form { 
     display: none;
   }
@@ -216,7 +237,7 @@ li:hover {
 }
 
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
   .busqueda { 
     display: none;
   }
@@ -322,6 +343,7 @@ li:hover {
   background-color: #fce803;
   margin-top: 5px;
   align-items: stretch;
+  align-content: center;
   
 }
 
@@ -349,14 +371,14 @@ li:hover {
   font-weight: 800;
 }
 
-@media screen and (max-width: 480px) {
+/*@media screen and (max-width: 768px) {
   .tituloModelosDestacados__texto {
     font-size: 20px;
     font-family: 'Mukta';
     font-weight: 800;
   }
 
-}
+}*/
 
 .cardsModelosDestacados {  
   display: grid;
@@ -794,7 +816,7 @@ align-content: center;
   grid-area: footer; 
   display: grid;
   background-color: black;
-  padding-left: 20px;
+  
   width: 100vw;
 }
 
@@ -867,7 +889,7 @@ align-content: center;
 
 }
 
-@media screen and (max-width: 768px) {
+/*@media screen and (max-width: 768px) {
   .containerCategorias {  
     display: grid;
     grid-template-columns: 1fr;
@@ -883,7 +905,7 @@ align-content: center;
       width: 100%;
   }
 
-}
+}*/
 
 .categorias {  
   display: grid;
@@ -908,7 +930,7 @@ align-content: center;
 
 
 
-@media screen and (max-width: 768px) {
+/*@media screen and (max-width: 768px) {
   .categorias {  
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -932,7 +954,7 @@ align-content: center;
     align-items: center;
   }
 
-}
+}*/
 
 .headCategorias {  
   display: grid;
@@ -952,7 +974,7 @@ align-content: center;
   border-radius: 20px;
 }
 
-@media screen and (max-width: 768px) {
+/*@media screen and (max-width: 768px) {
   .headCategorias {  
     display: grid;
     grid-template-columns: 0.8fr 1.2fr;
@@ -971,7 +993,7 @@ align-content: center;
     height: 50%;
   }
 
-}
+}*/
 
 .tituloCategorias { 
   grid-area: tituloCategorias; 
@@ -986,13 +1008,13 @@ align-content: center;
 
 }
 
-@media screen and (max-width: 768px) {
+/*@media screen and (max-width: 768px) {
   .tituloCategorias { 
     font-size: 20px;
   
   }
 
-}
+}*/
 
 .descripcionCategorias { 
   grid-area: descripcionCategorias; 
@@ -1007,13 +1029,13 @@ align-content: center;
   align-items: center;
 }
 
-@media screen and (max-width: 768px) {
+/*@media screen and (max-width: 768px) {
   .descripcionCategorias { 
     display: none;
   
   }
 
-}
+}*/
 
 .col-12 {
   padding: 0px;
@@ -1041,13 +1063,13 @@ align-content: center;
 
 }
 
-@media screen and (max-width: 768px) {
+/*@media screen and (max-width: 768px) {
   .modelosYellow {  
     height: 65%;
   
   }
 
-}
+}*/
 
 .imgModelosYellow { 
   grid-area: imgModelosYellow; 
@@ -1103,12 +1125,12 @@ align-content: center;
   margin: 10px;
 }
 
-@media screen and (max-width: 768px) {
+/*@media screen and (max-width: 768px) {
   .cuadros {  
     height: 65%;
   }
 
-}
+}*/
 
 .imgCuadros { 
   grid-area: imgCuadros; 
@@ -1162,12 +1184,12 @@ align-content: center;
   margin: 10px;
 }
 
-@media screen and (max-width: 768px) {
+/*@media screen and (max-width: 768px) {
   .rodados {  
     height: 65%;
   }
 
-}
+}*/
 
 .imgRodados { 
   grid-area: imgRodados; 
@@ -1219,12 +1241,12 @@ align-content: center;
   margin: 10px;
 }
 
-@media screen and (max-width: 768px) {
+/*@media screen and (max-width: 768px) {
   .frenos {  
     height: 65%;
   }
 
-}
+}*/
 
 .imgFrenos { 
   grid-area: imgFrenos; 
@@ -1278,12 +1300,12 @@ align-content: center;
   margin: 10px;
 }
 
-@media screen and (max-width: 768px) {
+/*@media screen and (max-width: 768px) {
   .cambios {  
     height: 65%;
   }
 
-}
+}*/
 
 .imgCambios { 
   grid-area: imgCambios; 
@@ -1337,12 +1359,12 @@ align-content: center;
 
 }
 
-@media screen and (max-width: 768px) {
+/*@media screen and (max-width: 768px) {
   .accesorios {  
     height: 65%;
   }
 
-}
+}*/
 
 
 .imgAccesorios { 
@@ -1393,6 +1415,7 @@ align-content: center;
     "irArriba"
     "footer";
 }
+
 
 /*.nav {  
   display: grid;
@@ -1487,20 +1510,22 @@ align-content: center;
 
 /*Aqui empieza el codigo para la página Blog*/
 
-.containerBlog {  display: grid;
+.containerBlog {  
+  display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 0.4fr 3fr 0.2fr 0.4fr;
+  grid-template-rows: 0.5fr 3fr 0.1fr 0.4fr;
   grid-auto-columns: 1fr;
   gap: 0px 0px;
   grid-auto-flow: row;
   grid-template-areas:
-    "nav"
+    "navBar"
     "mainBlog"
     "irArriba"
     "footer";
 }
 
-/*.nav {  display: grid;
+/*.nav {  
+  display: grid;
   grid-template-columns: 0.4fr 2fr 0.6fr;
   grid-template-rows: 1fr;
   gap: 0px 0px;
@@ -1738,6 +1763,14 @@ align-content: center;
   
 }
 
+@media screen and (max-width: 767px) {
+  .picQuienesSomos {
+    width: auto;
+    height: 100px;
+    
+  }
+}
+
 .txtQuienesSomos { 
   grid-area: txtQuienesSomos; 
   padding: 10px;
@@ -1767,9 +1800,8 @@ align-content: center;
     "footer";
 }
 
-.container-fluid {
-  justify-items: left;
-}
+
+
 
 /*.nav {  display: grid;
   grid-template-columns: 0.4fr 2fr 0.6fr;
